Revision history for Perl extension Padre::Plugin::PerlTidy.

{{$NEXT}}

0.17  2011.02.14 
    - Bumped the version number to reflect the adaptation to the Plugin API so the Plugin Manager shows the version of the plugin (CLAUDIO)
    - Removed bug broke the plugin (related to perltidyc). 	

0.16   2010.12.06
    - Restored missing POT/PO translation sources (Damyan Ivanov, AZAWAWI)

0.15   2010.10.29
    - Removed Test::NeedsDisplay dependency (AZAWAWI)

0.14   2010.10.27
    - Fixed t/01-menu.t to work under no DISPLAY (AZAWAWI)
    - t/00-load.t is magically injected by [@PadrePlugin] via [LoadTests] (AZAWAWI)

0.13   2010.10.25
    - Switched to Dist::Zilla (AZAWAWI)
    - Fixed t/00-load.t to work under no DISPLAY (AZAWAWI)
    - Fix the uninitialized variable warning when tidying an unsaved tab (AZAWAWI)
    - Updated Arabic translation (AZAWAWI)

0.12  Tue Oct 12 2010
    - Fix duplicate "my $output" call

0.11  Mon Oct 11 2010
    - Added translations:
      - Turkish (BURAK)
    - When tidying and exporting an unsaved document or text, the tab title is
      now used instead of the undefined document filename (AZAWAWI)
    - Prevent the current destructive nature when tidying a non-Perl document
      or text (AZAWAWI)
    - Re-used standard Padre's message and error method calls instead of
      Wx::MessageBox (AZAWAWI, idea from SZABGAB++)
    - Fixed RT #61993 "Can't tidy code when the bottom pane is off on Padre startup"
      (AZAWAWI, Reported by RENEEB++)

0.10  Thu Jan 21 2010
    - A variety of cleanups to use Padre::Current more efficiently (ADAMK)
    - Added menu separator (ADAMK)
    - A somewhat cleaner code style that is closer to general conventions (ADAMK)
    - Added project config file that matches that of Padre itself (ADAMK)
    - Applied the Perl::Tidy plugin to itself, using the project config (ADAMK, BRICAS)
    - Added a few more menu tests (BRICAS)

0.09  Thu Jan 14 2010